--- a/experience.html
+++ b/experience.html
@@ -124,7 +124,7 @@
                         <h5>Weibo Folio (Portfolio Designing Competition)</h5>
                         <h6>Obtained first prize in the Competition</h6>
                         <div>
-                          <button class="button"><a href="https://aswathysaji.github.io/Weibo-folio/" download>See My Work</a></button>
+                          <button class="button"><a href="https://aswathysaji.github.io/Weibo-folio/">See My Work</a></button>
                         </div>
                       </div>
                     </div>
