--- a/project.html
+++ b/project.html
@@ -62,6 +62,39 @@
                         <div class="item">
                             <div class="left">
                                 <div class="img">
+                                    <img src="Images/website.jpg" alt="she logo">
+                                </div>
+                            </div>
+                            <div class="right">
+                                <h2 class="project-title">Mentor.ly</h2>
+                                <p class="description">
+                                    This website is built as part of a 48 hours hackathon conducted by TinkerHub WIT.
+                                    Mentor.ly is a website that automates this functionality for WIT by helping users connect with the mentors of their choice by booking sessions online.
+                                </p>
+                                <div class="buttons">
+                                    <a href="http://mentorly.pythonanywhere.com/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="left">
+                                <div class="img">
+                                    <img src="Images/myweb.jpg" alt="she logo">
+                                </div>
+                            </div>
+                            <div class="right">
+                                <h2 class="project-title">Photography Website</h2>
+                                <p class="description">
+                                    A photography website built using Html, CSS, Js, Bootstrap as frontend, and Django as backend. This website has add photos, add videos, edit photos, edit videos, show messages sent by clients functionalities.
+                                </p>
+                                <div class="buttons">
+                                    <a href="https://sreeragrm.pythonanywhere.com/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="left">
+                                <div class="img">
                                     <img src="Images/she.jpg" alt="she logo">
                                 </div>
                             </div>
@@ -78,7 +111,7 @@
                         <div class="item">
                             <div class="left">
                                 <div class="img">
-                                    <img src="Images/myweb.jpg" alt="my logo">
+                                    <img src="Images/website.jpg" alt="my logo">
                                 </div>
                             </div>
                             <div class="right">
@@ -94,7 +127,7 @@
                         <div class="item">
                             <div class="left">
                                 <div class="img">
-                                    <img src="Images/she.jpg" alt="she logo">
+                                    <img src="Images/myweb.jpg" alt="she logo">
                                 </div>
                             </div>
                             <div class="right">
@@ -126,7 +159,7 @@
                         <div class="item">
                             <div class="left">
                                 <div class="img">
-                                    <img src="Images/ecom.jpg" alt="my logo">
+                                    <img src="Images/website.jpg" alt="my logo">
                                 </div>
                             </div>
                             <div class="right">
@@ -152,40 +185,6 @@
                                 </p>
                                 <div class="buttons">
                                     <a href="http://moodmovies.herokuapp.com/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="left">
-                                <div class="img">
-                                    <img src="Images/simon.jpg" alt="she logo">
-                                </div>
-                            </div>
-                            <div class="right">
-                                <h2 class="project-title">Simon Game</h2>
-                                <p class="description">
-                                    Children can increase their sequential processing, short-term memory, attention and visual processing with this sound and light mimicking game.
-                                    Simple but not easy, Simon can strengthen auditory processing, processing speed, visual processing and attention.
-                                    It is my version of simon game.
-                                </p>
-                                <div class="buttons">
-                                    <a href="https://aswathysaji.github.io/simon_game/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="left">
-                                <div class="img">
-                                    <img src="Images/drum.jpg" alt="she logo">
-                                </div>
-                            </div>
-                            <div class="right">
-                                <h2 class="project-title">Drumkit Website</h2>
-                                <p class="description">
-                                    Developed a Drumkit Wesite using JS.
-                                </p>
-                                <div class="buttons">
-                                    <a href="https://aswathysaji.github.io/javascript-drum_kit_website/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
                                 </div>
                             </div>
                         </div>
