--- a/project.html
+++ b/project.html
@@ -193,7 +193,7 @@
           </section>
           <div class="social-media text-center">
             <a href="https://www.facebook.com/profile.php?id=100009415915759" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/___a_s_w_a_t_h_y___/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/_aswathysaji_/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://github.com/aswathysaji" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/aswathy-saji-68ba47192/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             <a href="mailto:aswathy2saji@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
