--- a/experience.html
+++ b/experience.html
@@ -69,15 +69,19 @@
                     <div>
                       <h2 style="color:#ca4da0;">Club Activities</h2>
                       <div class="mt-4">
-                        <h5>TinkerHub GCEK ( 2021 - Present )</h5>
+                        <h5>SHE GCEK ( 2022 - Present )</h5>
+                        <h6>Lead Technical Support</h6>
+                      </div>
+                      <div class="mt-4">
+                        <h5>TinkerHub GCEK ( 2021 - 2022 )</h5>
                         <h6>Creative Lead</h6>
                       </div>
                       <div class="mt-4">
-                        <h5>SHE GCEK ( 2020 - Present )</h5>
+                        <h5>SHE GCEK ( 2020 - 2022 )</h5>
                         <h6>Member of Web Development Team</h6>
                       </div>
                       <div class="mt-4">
-                        <h5>ROBOCEK ( 2020 - Present )</h5>
+                        <h5>ROBOCEK ( 2020 - 2022 )</h5>
                         <h6>Member of Web Development Team</h6>
                       </div>
                       <div class="mt-4">
