--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                     <div>
                       <p>
                         Hey Folks, Myself Aswathy Saji. I know only a name doesn't make any sense. Let me explain,
-                        I am a girl who is very passionate to design and develop websites. Now I am a third-year Computer Science and Engineering student 
+                        I am a girl who is very passionate to design and develop websites. Now I am a fourth year Computer Science and Engineering student 
                         at Government College of Engineering, Kannur. My journey as a web developer has taught me a lot of things about myself, 
                         but the most important thing I've learned is that I don't give up. It takes more than natural talent to become good at something; 
                         you have to love and enjoy what you are doing. And now I am satisfied and happy with myself.. 
