--- a/experience.html
+++ b/experience.html
@@ -100,14 +100,23 @@
                       <div class="mt-4">
                         <h5>DeepFlow Technologies (Present)</h5>
                         <h6>Project Intern</h6>
+                        <div>
+                          <button class="small-button"><a href="Deepflow.pdf" download>Certificate</a></button>
+                        </div>
                       </div>
                       <div class="mt-4">
                         <h5>Cybervie-Ionots Technologies Pvt Ltd (1 Month)</h5>
                         <h6>UI/UX Designer Intern</h6>
+                        <div>
+                          <button class="small-button"><a href="Cybervie-Aswathy.pdf.pdf" download>Certificate</a></button>
+                        </div>
                       </div>
                       <div class="mt-4">
                         <h5>Little Cuckoo Creative Marketing Hub (3 Months)</h5>
                         <h6>Web Development Intern</h6>
+                        <div>
+                          <button class="small-button"><a href="LittleCuckoo.jpg" download>Certificate</a></button>
+                        </div>
                       </div>
                     </div>
                   </div>
