--- a/experience.html
+++ b/experience.html
@@ -98,7 +98,7 @@
                     <div>
                       <h2 style="color:#ca4da0;">Internships</h2>
                       <div class="mt-4">
-                        <h5>DeepFlow Technologies (Present)</h5>
+                        <h5>DeepFlow Technologies (6 Months)</h5>
                         <h6>Project Intern</h6>
                         <div>
                           <button class="small-button"><a href="Deepflow.pdf" download>Certificate</a></button>
