--- a/project.html
+++ b/project.html
@@ -72,7 +72,7 @@
                                     Mentor.ly is a website that automates this functionality for WIT by helping users connect with the mentors of their choice by booking sessions online.
                                 </p>
                                 <div class="buttons">
-                                    <a href="http://mentorly.pythonanywhere.com/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
+                                    <a href="http://mentorly1.pythonanywhere.com/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -88,7 +88,7 @@
                                     A photography website built using Html, CSS, Js, Bootstrap as frontend, and Django as backend. This website has add photos, add videos, edit photos, edit videos, show messages sent by clients functionalities.
                                 </p>
                                 <div class="buttons">
-                                    <a href="https://sreeragrm.pythonanywhere.com/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
+                                    <a href="http://frozenframes.pythonanywhere.com/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
                                 </div>
                             </div>
                         </div>
