--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                       </div>
                       <div class="skillbar" data-percent="70%">
                         <div class="skillbar-title">Backend Development</div>
-                        <div class="skill-bar-percent">70%</div>
+                        <div class="skill-bar-percent">60%</div>
                         <div class="skillbar-bar" style="width: 70%"></div>
                       </div>
                       <div class="skillbar" data-percent="95%">
@@ -145,9 +145,14 @@
                         <div class="skillbar-bar" style="width: 70%"></div>
                       </div>
                       <div class="skillbar" data-percent="60%">
+                        <div class="skillbar-title">React.js</div>
+                        <div class="skill-bar-percent">50%</div>
+                        <div class="skillbar-bar" style="width: 50%"></div>
+                      </div>
+                      <div class="skillbar" data-percent="60%">
                         <div class="skillbar-title">Vue.js</div>
-                        <div class="skill-bar-percent">60%</div>
-                        <div class="skillbar-bar" style="width: 60%"></div>
+                        <div class="skill-bar-percent">30%</div>
+                        <div class="skillbar-bar" style="width: 30%"></div>
                       </div>
                     </div>
                   </div>
